--- a/documentation/modules/appendix_crds.adoc
+++ b/documentation/modules/appendix_crds.adoc
@@ -1925,6 +1925,9 @@ Configuration of how TLS certificates are used within the cluster. This applies 
 |generateCertificateAuthority
 |boolean
 |If true then Certificate Authority certificates will be generated automatically. Otherwise the user will need to provide a Secret with the CA certificate. Default is true.
+|type
+|string (one of [strimzi.io, cert-manager.io])
+|The type of certificate manager. The available types are `strimzi.io` and `cert-manager.io`. Default is `strimzi.io`.
 |generateSecretOwnerReference
 |boolean
 |If `true`, the Cluster and Client CA Secrets are configured with the `ownerReference` set to the `Kafka` resource. If the `Kafka` resource is deleted when `true`, the CA Secrets are also deleted. If `false`, the `ownerReference` is disabled. If the `Kafka` resource is deleted when `false`, the CA Secrets are retained and available for reuse. Default is `true`.
@@ -1937,6 +1940,66 @@ Configuration of how TLS certificates are used within the cluster. This applies 
 |certificateExpirationPolicy
 |string (one of [replace-key, renew-certificate])
 |How should CA certificate expiration be handled when `generateCertificateAuthority=true`. The default is for a new CA certificate to be generated reusing the existing private key.
+|certManager
+|xref:type-CertManager-{context}[`CertManager`]
+|Configuration for using cert-manager to issue certificates. This only applies if the CA type is set to `cert-manager.io`.
+|====
+
+[id='type-CertManager-{context}']
+= `CertManager` schema reference
+
+Used in: xref:type-CertificateAuthority-{context}[`CertificateAuthority`]
+
+Configuration for using cert-manager to issue certificates. This only applies if the CA type is set to `cert-manager.io`.
+
+[cols="2,2,3a",options="header"]
+|====
+|Property |Property type |Description
+|issuerRef
+|xref:type-IssuerRef-{context}[`IssuerRef`]
+|Reference to the cert-manager issuer to use for issuing certificates. Required.
+|caCert
+|xref:type-CaCertRef-{context}[`CaCertRef`]
+|Reference to the Secret containing the CA certificate (public key) that trusts certificates issued by cert-manager. Required.
+|====
+
+[id='type-IssuerRef-{context}']
+= `IssuerRef` schema reference
+
+Used in: xref:type-CertManager-{context}[`CertManager`]
+
+Reference to the cert-manager issuer for TLS certificates. This only applies if the CA type is set to `cert-manager.io`.
+
+[cols="2,2,3a",options="header"]
+|====
+|Property |Property type |Description
+|name
+|string
+|The name of the cert-manager issuer. Required.
+|kind
+|string (one of [Issuer, ClusterIssuer])
+|The kind of the cert-manager issuer. Must be either `Issuer` or `ClusterIssuer`. Required.
+|group
+|string
+|The group of the cert-manager issuer. Default is `cert-manager.io`.
+|====
+
+[id='type-CaCertRef-{context}']
+= `CaCertRef` schema reference
+
+Used in: xref:type-CertManager-{context}[`CertManager`]
+
+Reference to the Secret containing the CA certificate (public key) that trusts certificates issued by cert-manager. This only applies if the CA type is set to `cert-manager.io`.
+
+[cols="2,2,3a",options="header"]
+|====
+|Property |Property type |Description
+|secretName
+|string
+|The name of the Secret. Required.
+|certificate
+|string
+|The name of the file certificate in the Secret.Required.
 |====
 
 [id='type-CruiseControlSpec-{context}']
