--- a/documentation/modules/configuring/con-config-mirrormaker2-sync-acls.adoc
+++ b/documentation/modules/configuring/con-config-mirrormaker2-sync-acls.adoc
@@ -31,8 +31,8 @@ metadata:
   name: my-mirror-maker2
   # ...
   mirrors:
-    - sourceCluster: "my-cluster-source"
-      targetCluster: "my-cluster-target"
+    - source:
+        # ...
       sourceConnector:
         config:
           sync.topic.acls.enabled: "true" # <1>
