--- a/documentation/modules/configuring/con-config-mm2-multiple-instances.adoc
+++ b/documentation/modules/configuring/con-config-mm2-multiple-instances.adoc
@@ -5,11 +5,11 @@
 // assembly-config.adoc
 
 [id='con-config-mm2-multiple-instances-{context}']
-= Configuring MirrorMaker 2 using a shared `connectCluster`
+= Configuring MirrorMaker 2 using a shared target Apache Kafka cluster
 
 [role="_abstract"]
-By default, Strimzi configures the group ID and names of the internal topics used by the Kafka Connect framework that MirrorMaker 2 runs on. 
-When running multiple instances of MirrorMaker 2, and they share the same `connectCluster` value, you must change these default settings using the following `config` properties:
+The group ID and names of the internal topics used by the Kafka Connect framework that MirrorMaker 2 runs on are configured in the `.spec.target` section. 
+When running multiple instances of MirrorMaker 2, and they share the same target cluster, you must use unique values to make sure the MirrorMaker 2 clusters operate independently.
 
 [source,yaml,subs="attributes+"]
 ----
@@ -18,16 +18,15 @@ kind: KafkaMirrorMaker2
 metadata:
   name: my-mirror-maker2
 spec:
-  connectCluster: "my-cluster-target"
-  clusters:
-  - alias: "my-cluster-target"
-    config:
-      group.id: my-connect-cluster # <1>
-      offset.storage.topic: my-connect-cluster-offsets # <2>
-      config.storage.topic: my-connect-cluster-configs # <3>
-      status.storage.topic: my-connect-cluster-status # <4>
-      # ...
-    # ...
+  # Target / Connect cluster configuration (required)
+  target:
+    alias: "my-cluster-target"
+    bootstrapServers: my-cluster-target-kafka-bootstrap:9092
+    groupId: my-mirror-maker2-group # <1>
+    configStorageTopic: my-mirror-maker2-config # <2>
+    offsetStorageTopic: my-mirror-maker2-offset # <3>
+    statusStorageTopic: my-mirror-maker2-status # <4>
+  # ...
 ----
 <1> The Kafka Connect cluster group ID within Kafka.
 <2> Kafka topic that stores connector offsets.
@@ -36,11 +35,11 @@ spec:
 
 NOTE: Values for the three topics must be the same for all instances with the same `group.id`.
 
-The `connectCluster` setting specifies the alias of the target Kafka cluster used by Kafka Connect for its internal topics. 
-As a result, modifications to the `connectCluster`, group ID, and internal topic naming configuration are specific to the target Kafka cluster. 
-You don't need to make changes if two MirrorMaker 2 instances are using the same source Kafka cluster or in an active-active mode where each MirrorMaker 2 instance has a different `connectCluster` setting and target cluster.
+The `target` cluster specifies the target Kafka cluster used by Kafka Connect for its internal topics. 
+As a result, modifications to the `target`, group ID, and internal topic naming configuration are specific to the target Kafka cluster. 
+You don't need to make changes if two MirrorMaker 2 instances are using the same source Kafka cluster or in an active-active mode where each MirrorMaker 2 instance has a different target cluster.
 
-However, if multiple MirrorMaker 2 instances share the same `connectCluster`, each instance connecting to the same target Kafka cluster is deployed with the same values. 
+However, if multiple MirrorMaker 2 instances share the same `target`, each instance connecting to the same target Kafka cluster is deployed with the same values. 
 In practice, this means all instances form a cluster and use the same internal topics.
 
 Multiple instances attempting to use the same internal topics will cause unexpected errors, so you must change the values of these properties for each instance.
