--- a/documentation/modules/configuring/proc-manual-stop-pause-mirrormaker2-connector.adoc
+++ b/documentation/modules/configuring/proc-manual-stop-pause-mirrormaker2-connector.adoc
@@ -41,12 +41,11 @@ metadata:
 spec:
   version: {DefaultKafkaVersion}
   replicas: 3
-  connectCluster: "my-cluster-target"
-  clusters:
+  target:
     # ...
   mirrors:
-  - sourceCluster: "my-cluster-source"
-    targetCluster: "my-cluster-target"
+  - source:
+      # ...
     sourceConnector:
       tasksMax: 10
       autoRestart:
