--- a/documentation/modules/configuring/con-config-high-volume-messages.adoc
+++ b/documentation/modules/configuring/con-config-high-volume-messages.adoc
@@ -194,17 +194,19 @@ metadata:
 spec:
   version: {DefaultKafkaVersion}
   replicas: 1
-  connectCluster: "my-cluster-target"
-  clusters:
-  - alias: "my-cluster-source"
-    bootstrapServers: my-cluster-source-kafka-bootstrap:9092
-  - alias: "my-cluster-target"
+  target:
+    alias: "my-cluster-target"
+    bootstrapServers: my-cluster-target-kafka-bootstrap:9092
+    groupId: my-mirror-maker2-group
+    configStorageTopic: my-mirror-maker2-config
+    offsetStorageTopic: my-mirror-maker2-offset
+    statusStorageTopic: my-mirror-maker2-status
     config:
       offset.flush.timeout.ms: 10000
-    bootstrapServers: my-cluster-target-kafka-bootstrap:9092
   mirrors:
-  - sourceCluster: "my-cluster-source"
-    targetCluster: "my-cluster-target"
+  - source:
+      alias: "my-cluster-source"
+        bootstrapServers: my-cluster-source-kafka-bootstrap:9092
     sourceConnector:
       tasksMax: 2
       config:
