--- a/documentation/modules/configuring/con-config-large-messages.adoc
+++ b/documentation/modules/configuring/con-config-large-messages.adoc
@@ -145,8 +145,8 @@ metadata:
 spec:
   # ...
   mirrors:
-  - sourceCluster: "my-cluster-source"
-    targetCluster: "my-cluster-target"
+  - source:
+      # ...
     sourceConnector:
       tasksMax: 2
       config:
