--- a/documentation/modules/configuring/con-config-mirrormaker2-sync.adoc
+++ b/documentation/modules/configuring/con-config-mirrormaker2-sync.adoc
@@ -42,8 +42,9 @@ metadata:
   name: my-mirror-maker2
   # ...
   mirrors:
-    - sourceCluster: "my-cluster-source"
-      targetCluster: "my-cluster-target"
+    - source:
+        alias: "my-cluster-source"
+        bootstrapServers: my-cluster-source-kafka-bootstrap:9092
       sourceConnector:
         config:
           offset-syncs.topic.replication.factor: -1 # <1>
@@ -94,14 +95,17 @@ metadata:
 spec:
   version: {DefaultKafkaVersion}
   # ...
-  clusters:
-  - alias: "my-cluster-source"
-    bootstrapServers: my-cluster-source-kafka-bootstrap:9092
-  - alias: "my-cluster-target"
+  target:
+    alias: "my-cluster-target"
     bootstrapServers: my-cluster-target-kafka-bootstrap:9092
+    groupId: my-mirror-maker2-group
+    configStorageTopic: my-mirror-maker2-config
+    offsetStorageTopic: my-mirror-maker2-offset
+    statusStorageTopic: my-mirror-maker2-status
   mirrors:
-  - sourceCluster: "my-cluster-source"
-    targetCluster: "my-cluster-target"
+  - source:
+      alias: "my-cluster-source"
+      bootstrapServers: my-cluster-source-kafka-bootstrap:9092
     sourceConnector:
       listOffsets:
         toConfigMap:
