--- a/documentation/modules/configuring/con-config-mirrormaker2-tasks-max.adoc
+++ b/documentation/modules/configuring/con-config-mirrormaker2-tasks-max.adoc
@@ -24,7 +24,6 @@ Task behavior:
 Task allocation rules:
 
 * By default, connectors run with 1 task, unless `tasksMax` is set.
-* The `MirrorHeartbeatConnector` always uses 1 task.
 * For the `MirrorSourceConnector`, the maximum possible tasks = number of partitions.
 * For the `MirrorCheckpointConnector`, the maximum possible tasks = number of consumer groups.
 * Actual tasks started is the lower value of `tasksMax` and the maximum possible tasks.
@@ -41,8 +40,8 @@ metadata:
 spec:
   # ...
   mirrors:
-  - sourceCluster: "my-cluster-source"
-    targetCluster: "my-cluster-target"
+  - source:
+      # ...
     sourceConnector:
       tasksMax: 10
       autoRestart:
@@ -65,8 +64,8 @@ metadata:
 spec:
   # ...
   mirrors:
-  - sourceCluster: "my-cluster-source"
-    targetCluster: "my-cluster-target"
+  - source:
+      # ...
     checkpointConnector:
       tasksMax: 10
       autoRestart:
