--- a/documentation/modules/configuring/con-config-mirrormaker2-connectors.adoc
+++ b/documentation/modules/configuring/con-config-mirrormaker2-connectors.adoc
@@ -15,6 +15,9 @@ MirrorMaker 2 consists of the following connectors:
 
 `MirrorSourceConnector`:: (Required) Replicates topics and ACLs from source to target cluster.
 `MirrorCheckpointConnector`:: (Optional) Synchronizes consumer group offsets for failover support. Only needed if offset tracking is required.
+`MirrorHeartbeatConnector`:: (Optional) Monitors connectivity between clusters. Useful for alerts but not required for replication.
+`MirrorHeartbeatConnector` is not configurable through the `KafkaMirrorMaker2` custom resource.
+You can use a separate `KafkaConnect` and `KafkaConnector` custom resources to run it.
 
 The following table describes connector properties and the connectors you configure to use them.
 
