--- a/documentation/modules/deploying/proc-using-access-operator.adoc
+++ b/documentation/modules/deploying/proc-using-access-operator.adoc
@@ -132,10 +132,9 @@ data:
 . Make the secret available to your application. 
 + 
 Applications can reference the secret directly, or you can inject it into an application's environment using an operator to implement the link:https://servicebinding.io/spec/core/1.0.0/[Service Binding specification].
-
-A user has the option for specifying the secret name if desired. This is achieved by adding `SecretName` field to the `KafkaAccess` spec.
-
-.Example access configuration with secretName
++
+Optionally, you can specify the name of the secret by adding the `secretName` field to the `KafkaAccess` resource specification:
++
 [source,yaml]
 ----
 apiVersion: access.strimzi.io/v1alpha1
@@ -149,5 +148,5 @@ spec:
     listener: tls
   secretName: my-custom-secret
 ----
-
-If no secret name is provided by the user, the secret will fallback to the name of the KafkaAccess.
++
+If no `secretName` is provided, the secret name defaults to the name of the `KafkaAccess` resource.
