docs(review): updates from comments by PP
Signed-off-by: prmellor <pmellor@redhat.com>

--- a/documentation/modules/glossary/c.adoc
+++ b/documentation/modules/glossary/c.adoc
@@ -5,13 +5,13 @@
 
 == Clients CA
 [id="glossary-clients-ca_{context}"]
-A Certificate Authority managed by the Strimzi Cluster Operator that issues TLS certificates to secure communication between external clients and Kafka brokers. 
-It can also be used for TLS client authentication.
-Certificates signed by this CA are trusted by Kafka listeners configured for TLS-based client authentication.
+A Certificate Authority managed by the Strimzi Cluster Operator that issues TLS certificates for Kafka clients.
+These certificates are used for mutual TLS (mTLS) authentication between external clients and Kafka brokers.
 
 == Cluster CA
 [id="glossary-cluster-ca_{context}"]
-A Certificate Authority managed by the Strimzi Cluster Operator that issues TLS certificates to secure communication between Kafka brokers and other internal components.
+A Certificate Authority managed by the Strimzi Cluster Operator that issues TLS certificates to secure communication between Kafka brokers, internal components, and Kafka clients. 
+These certificates enable encrypted and authenticated communication over TLS.
 
 == Cluster Operator
 [id="glossary-cluster-operator_{context}"]
@@ -24,7 +24,8 @@ For more information, see the following:
 
 == Cruise Control
 [id="glossary-cruise-control_{context}"]
-A component that provides support for automated Kafka cluster rebalancing and optimization, configured through the `Kafka` custom resource.
+A component that provides automated Kafka cluster rebalancing and optimization.
+Cruise Control is configured through the `Kafka` custom resource, while rebalancing operations are managed using the `KafkaRebalance` custom resource.
 
 For more information, see the following:
 
