--- a/documentation/assemblies/deploying/assembly-deploy-kafka-bridge.adoc
+++ b/documentation/assemblies/deploying/assembly-deploy-kafka-bridge.adoc
@@ -6,10 +6,10 @@
 // deploying/assembly-deploy-tasks.adoc
 
 [id='kafka-bridge-{context}']
-= Deploying Kafka Bridge
+= Deploying HTTP Bridge
 
 [role="_abstract"]
-Kafka Bridge provides an API for integrating HTTP-based clients with a Kafka cluster.
+HTTP Bridge provides an API for integrating HTTP-based clients with a Kafka cluster.
 
 //Procedure to deploy a Kafka Bridge cluster
 include::../../modules/deploying/proc-deploy-kafka-bridge.adoc[leveloffset=+1]
