--- a/documentation/modules/configuring/ref-list-of-kafka-bridge-resources.adoc
+++ b/documentation/modules/configuring/ref-list-of-kafka-bridge-resources.adoc
@@ -5,12 +5,12 @@
 // assembly-deploy-kafka-bridge.adoc
 
 [id='ref-list-of-kafka-bridge-resources-{context}']
-= List of Kafka Bridge cluster resources
+= List of HTTP Bridge cluster resources
 
 [role="_abstract"]
 The following resources are created by the Cluster Operator in the Kubernetes cluster:
 
-<bridge_cluster_name>-bridge:: Deployment which is in charge to create the Kafka Bridge worker node pods.
-<bridge_cluster_name>-bridge-service:: Service which exposes the REST interface of the Kafka Bridge cluster.
-<bridge_cluster_name>-bridge-config:: ConfigMap which contains the Kafka Bridge ancillary configuration and is mounted as a volume by the Kafka broker pods.
-<bridge_cluster_name>-bridge:: Pod Disruption Budget configured for the Kafka Bridge worker nodes.
+<bridge_cluster_name>-bridge:: Deployment which is in charge to create the HTTP Bridge worker node pods.
+<bridge_cluster_name>-bridge-service:: Service which exposes the HTTP Bridge REST interface.
+<bridge_cluster_name>-bridge-config:: ConfigMap which contains the HTTP Bridge ancillary configuration and is mounted as a volume by the Kafka broker pods.
+<bridge_cluster_name>-bridge:: Pod Disruption Budget configured for the HTTP Bridge worker nodes.
